--- a/counter/package.json
+++ b/counter/package.json
@@ -1,11 +1,15 @@
 {
-  "name": "sample-project",
+  "name": "counter",
   "version": "1.0.0",
   "main": "index.js",
   "license": "Apache-2.0",
+  "scripts": {
+    "build": "tsc --build .",
+    "build:watch": "tsc -w -p ."
+  },
   "dependencies": {
-    "@types/chai": "^4.3.0",
-    "chai": "^4.3.4",
-    "junokit": "^0.0.1"
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.4",
+    "junokit": "^0.0.8"
   }
 }
