--- a/counter/package.json
+++ b/counter/package.json
@@ -8,8 +8,9 @@
     "build:watch": "tsc -w -p ."
   },
   "dependencies": {
+    "chai": "^4.3.6",
+    "junokit": "^0.0.8",
     "ts-node": "^9.1.1",
-    "typescript": "^4.2.4",
-    "junokit": "^0.0.8"
+    "typescript": "^4.2.4"
   }
 }
