--- a/cw20-base/package.json
+++ b/cw20-base/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "counter",
+  "name": "cw20-base",
   "version": "1.0.0",
   "main": "index.js",
   "license": "Apache-2.0",
@@ -14,3 +14,4 @@
     "typescript": "^4.2.4"
   }
 }
+  
